force-app/main/default/objects/Service_Location__c/Service_Location__c.object-meta.xml
<CustomObject>
    <description>Stores validated customer delivery addresses and service-area eligibility for portable storage requests.</description>
    <label>Service Location</label>
    <nameField>
        <label>Service Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>