force-app/main/default/objects/Service_Location__c/fields/In_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>In_Service_Area__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Service Area</label>
    <type>Checkbox</type>
</CustomField>